--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+body{
+    background-color: #000;
+    
+  }
+
+#taskList::-webkit-scrollbar{
+display:none ;
+
+}
